ft: salt and pepper filter. fix: speed bar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                         <button data-filter="grayscale">Grigi</button>
                         <button data-filter="invert">Inverti</button>
                         <button data-filter="sepia">Seppia</button>
+                        <button data-filter="median">Mediano</button>
                         <button id="reset-image-btn">Reset</button>
                     </div>
                 </div>
