--- a/index.html
+++ b/index.html
@@ -75,13 +75,18 @@
         </section>
     </main>
 
-    <script src="js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
 
     <footer>
-    <p>Progetto realizzato da Alessandro Di Girolamo</p>
+    <p><strong>Progetto realizzato da Alessandro Di Girolamo</strong></p>
     <p>
-        <a href="https://www.flaticon.com/free-icons/pyramid" title="pyramid icons">
+        <a href="https://www.flaticon.com/free-icon/pyramid_6181172" title="pyramid icons">
         Pyramid icons created by Freepik - Flaticon
+        </a>
+    </p>
+      <p>
+        <a href="https://www.freepik.com/free-photo/3d-rendering-hexagonal-texture-background_66626551.htm#from_element=cross_selling__photo" title="Background image by Freepik">
+        Background image by Freepik
         </a>
     </p>
     </footer>
