ch: refine html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <section id="image-section" class="card">
-            <h2>1. Manipolazione Immagine</h2>
+            <h2>Manipolazione Immagine</h2>
             <label for="image-input" class="file-label">Carica Immagine</label>
             <input type="file" id="image-input" accept="image/*" />
             
@@ -39,7 +39,7 @@
         </section>
 
         <section id="audio-section" class="card">
-            <h2>2. Analisi Audio</h2>
+            <h2>Analisi Audio</h2>
             <label for="audio-input" class="file-label">Carica Audio</label>
             <input type="file" id="audio-input" accept="audio/*" />
             
