--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <button data-filter="invert">Inverti</button>
                         <button data-filter="sepia">Seppia</button>
                         <button data-filter="median">Mediano</button>
+                        <button id="fft-btn">FFT</button>
                         <button id="reset-image-btn">Reset</button>
                     </div>
                 </div>
