--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <div id="audio-visualizers">
                 <canvas id="waveform-canvas"></canvas>
                 <canvas id="spectrum-canvas"></canvas>
+
+                <canvas id="spectrogram-canvas"></canvas>
             </div>
 
             <div id="audio-controls">
