--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                     <input type="range" id="audio-seek-bar" value="0" step="0.1" disabled />
                     <span id="audio-time-display">00:00 / 00:00</span>
                 </div>
+                <div class="control-group" style="text-align: right;">
+                    <button id="toggle-mel-btn">Mel: OFF</button>
+                </div>
             </div>
         </section>
     </main>
