--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visual Sound Mixer</title>
+    <title>DG Pixel & Onde</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/pyramid.png" />
 </head>
 <body>
     <header>
-        <h1>Visual Sound Mixer</h1>
+        <h1>DG Pixel & Onde</h1>
     </header>
 
     <main>
